--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,12 +1,12 @@
-- provide(:title, 'Edit User')
-- provide(:button_text, 'Save Changes')
+- provide(:title, 'Editar User')
+- provide(:button_text, 'Salvar alterações')
 - provide(:url_to, user_path)
 h1
-  | Update your profile
+  | Atualizar suas informações
 .row
   .col-md-6.col-md-offset-3
     = render 'form'
     .gravatar_edit
       = gravatar_for @user
       a href="http://gravatar.com/emails" target="_blank" rel="noopener"
-        | Change
+        | Trocar meu Gravatar
