--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,4 +1,4 @@
-- provide(:title, 'Editar User')
+- provide(:title, 'Editar Usuário')
 - provide(:button_text, 'Salvar alterações')
 - provide(:url_to, user_path)
 h1
