Finish sending e-mails after creating reserve. Almost everything is up to date now (excep ReactJS)

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -2,7 +2,7 @@ footer.footer
   small
     |  Produzido em 
     a[href="https://rubyonrails.org/"]
-      | Ruby on Rails Tutorial
+      | Ruby on Rails
     |  por 
     a[href="https://www.inventosdigitais.com.br/sobre?locale=pt-BR"]
       | Inventos Digitais
