--- a/app/views/static_pages/contact.html.slim
+++ b/app/views/static_pages/contact.html.slim
@@ -2,7 +2,9 @@
 h1
   | Contact
 p
-  |  Gostaria de fazer elogios, reclamções ou ainda solicitar ajuda? Envie-nos um e-mail através 
-  a[href="http://www.railstutorial.org/contact"]
-    | deste link
-  |  que entraremos em contato com você.
+  |  Gostaria de fazer elogios, reclamções ou ainda solicitar ajuda? 
+  a[href="mailto:raquel@inventosdigitais.com.br?Subject=Fale%20Conosco"]
+    | Fale Conosco
+  |   através deste link que teremos o prazer em lhe atender.
+  | <br />
+  | Nosso suporte está disponível por e-mail de segunda à sexta, das 9h às 18h.
