--- a/app/views/user_mailer/account_activation.html.slim
+++ b/app/views/user_mailer/account_activation.html.slim
@@ -1,9 +1,9 @@
 h1
-  | Sample App
+  | Minions Virtual
 p
   | Hi 
   = @user.name
   | ,
 p
-  |  Welcome to the Sample App! Click on the link below to activate your account: 
+  |  Bem vindo ao Minions Virtual! Clique no link abaixo para ativar sua conta: 
 = link_to "Activate", edit_account_activation_url(@user.activation_token, email: @user.email)
