--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,8 +1,7 @@
-To reset your password click the link below:
+Olá. Para resetar a sua senha, clique no link abaixo:
 
 <%= edit_password_reset_url(@user.reset_token, email: @user.email) %>
 
-This link will expire in two hours.
+Ele irá expirar em duas horas.
 
-If you did not request your password to be reset, please ignore this email and
-your password will stay as it is.
+Se você não solicitou que sua senha fosse recuperada, pedimos que ignore este email que ela não será alterada.
